--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -20,7 +20,12 @@
 
     <!-- Bootstrap and Font Awesome css -->
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--link href="css/bootstrap.min.css" rel="stylesheet"-->
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- Theme stylesheet -->
     <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
@@ -40,7 +45,7 @@
     <link rel="shortcut icon" href="favicon.png">
 
     <!-- Mordernizr -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
+    <!--script src="js/modernizr-2.6.2.min.js"></script-->
 
     <!-- Responsivity for older IE -->
     <!--[if lt IE 9]>
