made assignment 1 responsive. took out assignment 2 in this repository

--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -41,7 +41,8 @@
 								<img src="assets/images/city.jpg" alt="Rutgers Info Widget" class="rpg">
 				</section>
 			</div>
-		<aside class="connect">
+		<section class="sidebar">
+					<aside class="connect">
 						<h2>Connect With Me</h2>
 						<hr>
 						<ul>
@@ -51,12 +52,17 @@
 		
 							<li><a class="floatLeftmargin" href="#placeholder"><img class="logo" src="assets/images/stackoverflow.png" alt="stackoverflow" ></a></li>
 						</ul>
-		</aside>
-	</div>
-		<div class="footer">
-			<footer>&copy Copyright 2016 Rowena</footer>
-		</div>
+					</aside>
+				</section>
+				<footer>
+					<div class="footer">
+						&copy Copyright 2016 Rowena
+					</div>
+				</footer>
+</div>
+					
 </body>
+</html>
 	
 
 
