--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<title>All About Rowena</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -24,9 +23,8 @@
 			</ul>
 		</nav>	
 	</div>
-			<div class="container">
-
-	  		 <section class="main-bio">
+				<div class="container">
+	  		 	<section class="main-bio">
 						<h2>About Me</h2>
 								<hr>
 						<img id="bioImage" class="img200" src="assets/images/FullSizeRender.jpg">
@@ -36,7 +34,8 @@
 						You know what else is awesome?  <strong>Unicorns.</strong>  Up until I was about 21 years of age, I truly believed unicorns not only existed and just were endangered species, but I also believed they held the secret to youth in their blood.  I know this may seem silly to you, but I don't know, they're still awesome!  Well to my surprise, turns out unicorns ARE real, according to NYTimes this past year.  Unfortunately, they were not magical like I thought, but I will still bask in the fact that they once existed.  Anyway, back to me.  Currently, I am a New Jersey licensed Cosmetologist.  I've been doing hair professionally for over 13 years and have conquered all areas in my field that I wanted you.  Prior to doing hair, I was in college changing my major as if it was my job.  I explored Graphic Design, Computer Information Systems, and Nursing.  The only natural step was to go into Cosmetology next, right?  Well...I did it...loved it...stuck to it...and now I'm done.  I hope you enjoy my page because now I'm on to my next adventure-- to acquire super powers as a Web Developer!</p>   
 					</section>
 				</div>
-				<aside class="connect">
+				<section class="sidebar">
+					<aside class="connect">
 						<h2>Connect With Me</h2>
 						<hr>
 						<ul>
@@ -47,11 +46,16 @@
 							<li><a class="floatLeftmargin" href="#placeholder"><img class="logo" src="assets/images/stackoverflow.png" alt="stackoverflow" ></a></li>
 						</ul>
 					</aside>
-			</div>
-			<div class="footer">
-				<footer>&copy Copyright 2016 Rowena</footer>
-			</div>
+				</section>
+				<footer>
+					<div class="footer">
+						&copy Copyright 2016 Rowena
+					</div>
+				</footer>
+</div>
+					
 </body>
+</html>
 	
 
 
